[package]
name = "victoria-metrics-writer"
version = "0.1.0"
edition = "2021"
authors = ["Peter Allwin <peter@allwin.se>"]
repository = "https://github.com/peterall/victoria-metrics-writer.git"
homepage = "https://github.com/peterall/victoria-metrics-writer.git"
license = "MIT"
readme = "README.md"
description = "A Rust library for writing samples to Victoria Metrics' JSON import endpoint"


[dependencies]
tokio = {version = "1.21", features = ["rt", "macros"] }
bytes = "1.2"
reqwest = "0.11"
serde = {version = "1.0", features = ["derive"]}
serde_json = "*"
chrono = {version = "0.4", features = ["serde"] }
thiserror = "*"